fixed bugs in WeekProgressBar, completing work on TimelineProgressBar

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="WeekProgressBar">
-        <attr name="progress" format="float" />
+        <attr name="wpb_progress" format="float" />
         <attr name="wpb_backgroundcolor" format="color" />
         <attr name="wpb_progresscolor" format="color" />
         <attr name="wpb_progresstextcolor" format="color" />
+    </declare-styleable>
+    <declare-styleable name="TimelineProgressBar">
+        <attr name="tpb_progress" format="integer" />
+        <attr name="tpb_backgroundcolor" format="color" />
+        <attr name="tpb_progresscolor" format="color" />
+        <attr name="tpb_progresstextcolor" format="color" />
     </declare-styleable>
 </resources>
