--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
@@ -12,7 +13,13 @@
         android:id="@+id/progress"
         android:layout_width="244dp"
         android:layout_height="44dp"
-        app:progress="60"/>
+        app:wpb_progress="100"/>
+    
+    <com.example.dfrprogressbar.ui.TimelineProgressBar
+        android:id="@+id/timeline"
+        android:layout_width="244dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="100dp" />
 
 
 </LinearLayout>
