--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
         android:id="@+id/progress"
         android:layout_width="244dp"
         android:layout_height="44dp"
-        app:wpb_progress="100"/>
+        app:wpb_progress="50"/>
     
     <com.example.dfrprogressbar.ui.TimelineProgressBar
         android:id="@+id/timeline"
-        android:layout_width="244dp"
+        android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="100dp"
         app:tpb_progress="40"/>
